Fix layout and scrollbar styles

--- a/client/src/app/page.css
+++ b/client/src/app/page.css
@@ -31,7 +31,6 @@
     width: 70%;
 }
 
-
 .forgot-password {
     /* padding-left: 62px; */
     margin-top: 5%;
@@ -104,3 +103,19 @@ h1 {
     justify-content: center;
     align-items: center;    
 }
+
+::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #f5f5f5;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(9, 14, 146, 0.386);
+    border-radius: 10px;
+  }
+  
